# ChangeLog for dev-ruby/haml
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/haml/ChangeLog,v 1.46 2010/08/08 14:09:58 graaff Exp $

*haml-3.0.16 (08 Aug 2010)

  08 Aug 2010; Hans de Graaff <graaff@gentoo.org> +haml-3.0.16.ebuild:
  Version bump.

*haml-3.0.13-r1 (30 Jun 2010)

  30 Jun 2010; Hans de Graaff <graaff@gentoo.org> haml-3.0.13.ebuild,
  +haml-3.0.13-r1.ebuild:
  Fix tests by adding a dependency on dev-ruby/erubis, bug 326303. Restrict
  tests in haml-3.0.13 and fix them in -r1. Drop ppc, ppc64 keywords for -r1
  due to new dependency: bug 326353.

*haml-3.0.13 (25 Jun 2010)

  25 Jun 2010; Hans de Graaff <graaff@gentoo.org> +haml-3.0.13.ebuild:
  Version bump.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org> -haml-2.2.23.ebuild,
  haml-2.2.24.ebuild:
  Cleanup old versions, use new syntax.

*haml-2.2.24 (30 Apr 2010)

  30 Apr 2010; Hans de Graaff <graaff@gentoo.org> +haml-2.2.24.ebuild:
  Version bump.

  30 Apr 2010; Hans de Graaff <graaff@gentoo.org> -haml-2.2.20.ebuild,
  -haml-2.2.22.ebuild, -haml-2.2.22-r1.ebuild:
  Remove old versions.

*haml-2.2.23 (27 Apr 2010)

  27 Apr 2010; Hans de Graaff <graaff@gentoo.org> +haml-2.2.23.ebuild:
  Version bump.

*haml-2.2.22-r1 (02 Apr 2010)

  02 Apr 2010; Hans de Graaff <graaff@gentoo.org> +haml-2.2.22-r1.ebuild:
  Also install init.rb, fixing #312693. Thanks to Simon Wells for reporting.

*haml-2.2.22 (23 Mar 2010)

  23 Mar 2010; Hans de Graaff <graaff@gentoo.org> +haml-2.2.22.ebuild:
  Version bump. Better compatibility with Rails 3.

  23 Mar 2010; Hans de Graaff <graaff@gentoo.org> -haml-2.2.15.ebuild,
  -haml-2.2.17.ebuild, -haml-2.2.19.ebuild:
  Remove old versions.

*haml-2.2.20 (17 Feb 2010)

  17 Feb 2010; Hans de Graaff <graaff@gentoo.org> +haml-2.2.20.ebuild:
  Version bump.

*haml-2.2.19 (10 Feb 2010)

  10 Feb 2010; Hans de Graaff <graaff@gentoo.org> +haml-2.2.19.ebuild: