@@ -4,16 +4,18 @@ Hash: SHA256
 DIST haml-2.2.24.gem 155136 RMD160 012d918ca6e46842e71419623785c4cf4d17fe6b SHA1 2f1a689ea66935342d90df3b80ffeabcaaae891b SHA256 cdea73e3ed3c65d68b6431bfc80765c88c4c2bfe21516ff895f284eeb98c0bf9
 DIST haml-3.0.13.gem 516608 RMD160 f6010befb1fda9579a760a470baed42313289433 SHA1 bdd5a1cd25f61706362cf6b38e7b3930711b4c5f SHA256 6c0194f495208b5764606fe39b743bfad398eaf13cb825f9dd330c5ffe227b4c
 DIST haml-3.0.16.gem 269824 RMD160 7ee1edd11d6cd588f2cb245b23e6ebc73190db37 SHA1 d8b8d258e8889b2385a47c2f886f4a26470decff SHA256 b7d51a73dadd2348862e1d48cb0806a49225708fd6fe57149bbcfea6eefbb9e9
+DIST haml-3.0.17.gem 270336 RMD160 f451255fc5043b93c23f97faa8e913114dfe9777 SHA1 818e4e05187def131cdfe06dc7cb539a92ac6aef SHA256 7a38b6bb360620ec50dccb52c90267eecdfac94259c738c32916e738ebf8b0b8
 EBUILD haml-2.2.24.ebuild 1135 RMD160 0cce30570efc32cc183008c0ca12b9e745a114c5 SHA1 e3770c88e9007517dae2a8f04ed87af042136168 SHA256 8921e8e475395b4642c25b13bf2d05b3b39801e2c7991f08d0adb18fc3f4a96b
 EBUILD haml-3.0.13-r1.ebuild 932 RMD160 3c4e4dfa23189ef10b75feed2e104eb3a6150203 SHA1 4d617ec89a26538759f86b99f18fc7a9aead3e9a SHA256 b7818c16a2b24bca90862d6996a990a003ddba01b673ae8deb5cef075fea7199
 EBUILD haml-3.0.13.ebuild 940 RMD160 8562a6e407870b9275df224c0ef32e56f11023e1 SHA1 91e58b552722b81a422daddf0ffa05d1a54db832 SHA256 034d9477d4838b688dda89bd675e699bb980c445e1cd1b06110d96f23384e1a0
 EBUILD haml-3.0.16.ebuild 929 RMD160 0ebbe105b989d918b93ad288ab20bff526d931dc SHA1 16833e45f48a51b2519cd5b86a87fe3f821ae903 SHA256 e762cf6acc3283d7b47bd05fbdf3d366e4530f87ec2075698af4b87cd7f401d9
-MISC ChangeLog 6605 RMD160 4d0fc5415faa9b5103b6b9216db025bc47fa15ab SHA1 cc449ce531450fb6bbc99e5ec657483a112b45fa SHA256 facd3d522b63751ee407cd302995ef5fdf6f1f55daafe9f49a104ba695d56dee
+EBUILD haml-3.0.17.ebuild 924 RMD160 50f007991eda1c9e9952ffb021565a9102a274e6 SHA1 ced48602aa7400816922209ad1a07e4d32a1fe8d SHA256 157e6933f6e42ed9de5b729d9a63fb330833fcb39b36ba588498eb5c61c7c7fa
+MISC ChangeLog 6778 RMD160 9fe9aeec17b6fbc0924ba6df4c050922af5b80d0 SHA1 4b7e1d18cb45da281b76724dac17ca6c1b9f5f1d SHA256 91761c63d7360c6dceac632e635fdc7fceaf836aa7ef1d5712600fda7a947dcb
 MISC metadata.xml 219 RMD160 c4f05e85bd9645a64124d3847da25522de568428 SHA1 13b624bb74ad54c50dd466cb811f39ed171fe913 SHA256 670b7642b3830f31d24a317577d842b3499592b6e9a6283312b89c59397a2932
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkxeurwACgkQZihJkut28SulGgD/RZ0cQJhBY/XUffi2pV9ZlEr/
-DHViRodYwQ0jEBQKn/8A/1uhivmGW5yCeiPUFbLwc4A7uNp6t5kXzCJm/Bvdf3xz
-=/yRL
+iF4EAREIAAYFAkx6PEoACgkQZihJkut28SvjRAD/WY/H3E45ZthFnVBQZbmE3aTb
+MBG7zxRCnfLOYFK/b8YA/A/SCyZ2wfngLzQ3cCihCBk9rTJHBdYxDbTlkkkLxUCZ
+=Y4Zl
 -----END PGP SIGNATURE-----
