@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/haml
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/haml/ChangeLog,v 1.46 2010/08/08 14:09:58 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/haml/ChangeLog,v 1.47 2010/08/29 10:53:57 graaff Exp $
+
+*haml-3.0.17 (29 Aug 2010)
+
+  29 Aug 2010; Hans de Graaff <graaff@gentoo.org> +haml-3.0.17.ebuild:
+  Version bump. Depend on rails, not just actionpack, to fix bug 330615.
 
 *haml-3.0.16 (08 Aug 2010)
 
